2007-08-30  Mikio Braun  <mikiobraun@gmail.com>

	* eval.h (frame_jump): Quick fix for the 'break' and 'deliver'
	issue. The problem was that break does not work anymore since
	'for' itself is a function and 'break' does not cross function
	boundaries.

	The fix is: it crosses boundaries. This means that a function
	which does not contain a 'for' loop might nevertheless call
	'break' in order to break an outer for loop (and the same also for
	'deliver') I guess there is no cleaner solution.

	* eval.c, eval.h: removed code for location tracking (unused as of
	now, we can put it back in later.

2007-08-30  Stefan Harmeling  <harmeling@gmail.com>

	* object.c (extend): added a case for objects that implement
	'extend' themselves, like tuples.

	* prelude.rha: more fun stuff!!!  Try:

  	  l = list().push(17, 42, 66).unshift(10, 100);
	  t = tuple(l);
	  t(3) = "cool";
	  t = t + t;
	  l = list(t) + l;

	Now we have

	  l == [100, 10, 17, "cool", 66, 100, 10, 17, "cool", 66, 100, 10, 17, 42, 66]
	
	* eval.c:  rewritten the calling mechanism, which now doesn't
	distinguish between pure rhabarber functions and C-function until
	the very end of calling them.  Before the type-checking mechanism
	is the same.  note that if a builtin function is happy with
	OBJECT_T arg then no type check is triggered.  also for primitive
	types a simplified faster type check is done (object.c:pcheck()).

	* core.c (create_pattern): added
	(create_fn_data_entry): adjusted for ellipsis

	* test_run_test.rha: added a simple file which is used to test
	'run' and 'load'.

	* rha_lexer.l: added lexer support for ellipsis, i.e now should be
	able to define in rhabarber:

	f = fn (x, ...) for (y in args(1:args.len())) x+=y
	f(1,2,3,4) == 10

	* prelude.rha: the most important stuff for defining and
	overloading function has been moved out of prelude.rha to
	rha_init.c.  This makes editing prelude.rha much more robust and
	we actually need only a single file for all stuff, which I think
	is nice.  